# learn-cpp

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings
cmake/: AssureOutOfSourceBuild.cmake  Cache.cmake  CommonSettings.cmake  Conan.cmake  ConfigureLinker.cmake  ConfigureSanitizers.cmake  ConfigureWarnings.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Warnings.cmake
lib/Catch2/: CMakeLists.txt
lib/fmt/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
lib/spdlog/: CMakeLists.txt
modules/data_structures/: CMakeLists.txt
modules/data_structures/include/: data_structures.hpp  linked_list.hpp
modules/data_structures/src/: linked_list.inl
modules/data_structures/tests/: foo.cpp  heap_test.cpp  linked_list_test.cpp
modules/main/: CMakeLists.txt  main.cpp
